jia-api-core模块升级。